# skneuro

./: CMakeLists.txt  README.md
cmake/modules/: FindNUMPY.cmake
examples/: data_augmentor.py  deep_histogram.py  g.py  handlejson.py  mini_batch_em.py  mini_batch_em_2d.py  mini_batch_k_means.py  mydiff.py  myrank.py  non_local_mean_3d.py  normalize_test_2.py  opt.json  patch_rf.py  smooth_compare.py  superpixels.py
include/skneuro/: skneuro.hxx
include/skneuro/clustering/: k_means_plus_plus.hxx  mini_batch_em.hxx  mini_batch_k_means.hxx  mini_batch_kmeans.hxx
include/skneuro/denoising/: ball_rank_order.hxx  diffusion.hxx  eigen_decomposition3.hxx  iir_gaussian.hxx  non_local_mean.hxx  very_non_local_mean.hxx
include/skneuro/learning/: distance_transform_gm.hxx  feature_extraction.hxx  gt_helper.hxx  partition-comparison.hxx  patch_rf.hxx  patch_rf_utitilies.hxx  split_finder.hxx  voxel_prediction_feature_operator.hxx  voxel_prediction_tools.hxx
include/skneuro/learning/grf/: grf.hxx  rf_topology.hxx  tree.hxx
include/skneuro/oversegmentation/: viscous_watershed.hxx
include/skneuro/parallel/: parallel_multi_array.hxx
include/skneuro/utilities/: blocking.hxx  patch_distance.hxx  rank_order.hxx
pipelines/: neuro_proof.py
pipelines/knott1000/: agglomerate_superpixels.py  combine_features.py  make_rag_l1.py  make_train_test_features.py  make_train_test_rag_l1.py  make_training_set.py  opt.json  pipeline.py  project_gt.py  show_pixel_classification.py  split_dataset.py  superpixels.py  train_classifier.py  train_classifier_new.py
python/: CMakeLists.txt
python/python_module/skneuro/: __init__.py  blocking.py  filters.py
python/python_module/skneuro/blockwise_filters/: __init__.py
python/python_module/skneuro/clustering/: __init__.py
python/python_module/skneuro/core/: __init__.py
python/python_module/skneuro/denoising/: __init__.py
python/python_module/skneuro/diffusion/: __init__.py
python/python_module/skneuro/edge_detectors/: __init__.py
python/python_module/skneuro/feature_learning/: __init__.py
python/python_module/skneuro/h5tools/: __init__.py
python/python_module/skneuro/learning/: __init__.py  __init__.py.save  super_rf.py
python/python_module/skneuro/neuroflow/: __init__.py
python/python_module/skneuro/oversegmentation/: __init__.py
python/python_module/skneuro/parallel/: __init__.py
python/python_module/skneuro/pixel_prediction/: __init__.py
python/python_module/skneuro/utilities/: __init__.py  blockwise_caller.py  thread_pool.py
python/python_module/skneuro/utilities/jsontricks/: handlejson.py
python/python_module/skneuro/workflows/: __init__.py  block_gt_workflow.py  blockwise_gt.py  workflow_helper.py
python/python_src/: CMakeLists.txt
python/python_src/clustering/: CMakeLists.txt  py_clustering.cpp  py_mini_batch_em.cxx  py_mini_batch_k_means.cxx
python/python_src/core/: CMakeLists.txt  py_core_a.cxx
python/python_src/denoising/: CMakeLists.txt  py_denoising.cxx  py_denoising_ball_rank_order.cxx  py_denoising_diffusion.cxx  py_denoising_non_local_mean.cxx  py_denoising_very_non_local_mean.cxx  py_iir.cxx
python/python_src/learning/: CMakeLists.txt  py_compare.cxx  py_feature_extraction.cxx  py_grf.cxx  py_gt_helper.cxx  py_learning.cxx  py_patch_rf.cxx  py_voxel_prediction_features.cxx  py_voxel_prediction_tools.cxx
python/python_src/oversegmentation/: CMakeLists.txt  py_oversegmentation.cxx  py_seg_helper.cxx  py_viscous_watershed.cxx
python/python_src/parallel/: CMakeLists.txt  py_parallel.cxx  py_parallel_numpy.cxx
python/python_src/utilities/: CMakeLists.txt  py_utilities.cxx  py_utilities_block.cxx  py_utilities_block_data.cxx  py_utilities_blocking.cxx
python/test/: test_blocking.py  test_blocking_gui.py  test_mini_batch.py
python_module/skneuro/clustering/: __init__.py
src/: CMakeLists.txt
src/python/: CMakeLists.txt
src/python/clustering/: CMakeLists.txt  py_clustering.cpp  py_mini_batch_k_means.cxx
src/python/core/: CMakeLists.txt  py_core.cpp  py_core_a.cxx
src/test/: CMakeLists.txt  test_accumulator.cxx
