#--------------------------------------------------------------
# add PYTHON SRC to project tree
#--------------------------------------------------------------
add_subdirectory (python_src) 


#--------------------------------------------------------------
# add PYTHON DOC to project tree
#--------------------------------------------------------------
#add_subdirectory (python_doc) 
